feat: add compose file for mongo replica set with single node

--- a/mongo/mongod.conf
+++ b/mongo/mongod.conf
@@ -27,17 +27,18 @@ net:
 processManagement:
   timeZoneInfo: /usr/share/zoneinfo
 
-# security:
-  # keyFile: /data/keyfile.txt
+security:
+  authorization: disabled 
+  # keyFile: /data/mongo.keyfile
   # transitionToAuth: true
 
 #operationProfiling:
 
 replication:
   replSetName: "rs0"
-  members:
-    - host: "localhost:27017"
-      id: 0
+  # members:
+  #   - host: "localhost:27017"
+  #     id: 0
 
 #sharding:
 
