fix: used absolute path rather than relative path for data

--- a/mongo/mongo-compose.yml
+++ b/mongo/mongo-compose.yml
@@ -4,10 +4,10 @@ services:
     image: mongo:5.0
     container_name: mongo
     volumes:
-      - ~/data/mongo/data:/data/db
+      - /data/mongo/data:/data/db
       - /data/mongo/backups:/data/backups
-      - ~/data/mongo/mongod.conf:/etc/mongod.conf.orig
-      - ~/data/mongo/mongo.keyfile:/data/mongo.keyfile
+      - /data/mongo/mongod.conf:/etc/mongod.conf.orig
+      - /data/mongo/mongo.keyfile:/data/mongo.keyfile
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: root
