--- a/mongo/mongod.conf
+++ b/mongo/mongod.conf
@@ -5,7 +5,7 @@
 
 # Where and how to store data.
 storage:
-  dbPath: /var/lib/mongodb
+  dbPath: /data/db
   journal:
     enabled: true
 
@@ -21,7 +21,7 @@ systemLog:
 # network interfaces
 net:
   port: 27017
-  bindIp: 127.0.0.1
+  bindIp: 0.0.0.0
 
 # how the process runs
 processManagement:
@@ -29,7 +29,7 @@ processManagement:
 
 security:
   authorization: disabled 
-  # keyFile: /data/mongo.keyfile
+  keyFile: /data/mongo.keyfile
   # transitionToAuth: true
 
 #operationProfiling:
